# django-crispy

./: pyproject.toml  requeriment.txt
backend/: settings.py
core/: urls.py
core/templates/core/: base.html  home.html
